# university__oop-solution-bundle

./: CMakeLists.txt  README.md  main.cpp  test.cpp
cmake-scripts/utils/: booleans.cmake  logging.cmake
oop/: auth.c++  auth.h++  bigint.c++  bigint.h++  bigint_command_executor.c++  bigint_command_executor.h++  csv.c++  csv.h++  dictionary.h++  logger.c++  logger.h++  stack.h++
oop/utils/: strings.h++  type_demangler.h++
